[gd_scene load_steps=10 format=3 uid="uid://bps2rkpr6ji1x"]

[ext_resource type="Script" uid="uid://xk1grdmtexu0" path="res://scripts/GameManager.gd" id="1_78awf"]
[ext_resource type="PackedScene" uid="uid://bd2n3yyo7v6bq" path="res://scenes/Player.tscn" id="2_s0nni"]
[ext_resource type="PackedScene" uid="uid://386ox3eaw70n" path="res://scenes/Button.tscn" id="3_aug50"]
[ext_resource type="PackedScene" uid="uid://br0mffdefr6lw" path="res://scenes/PauseMenu.tscn" id="4_kiw3p"]
[ext_resource type="PackedScene" uid="uid://b14v7egb5kahn" path="res://scenes/ReplayOrb.tscn" id="4_s0nni"]
[ext_resource type="PackedScene" uid="uid://c2jig3d05e0xl" path="res://scenes/SimonNPC.tscn" id="5_aug50"]
[ext_resource type="AudioStream" uid="uid://6e3dud7ogldx" path="res://sounds/320685__dpren__swage.mp3" id="6_kiw3p"]
[ext_resource type="AudioStream" uid="uid://dklfu8k0iq252" path="res://sounds/391650__jeckkech__beep.wav" id="7_400sg"]

[sub_resource type="LabelSettings" id="LabelSettings_aug50"]
font_size = 40

[node name="Game" type="Node2D"]
script = ExtResource("1_78awf")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Player" parent="." instance=ExtResource("2_s0nni")]

[node name="ButtonGreen" parent="." instance=ExtResource("3_aug50")]
position = Vector2(64, 128)
color = "green"

[node name="ButtonYellow" parent="." instance=ExtResource("3_aug50")]
position = Vector2(-64, 128)
color = "yellow"

[node name="ButtonBlue" parent="." instance=ExtResource("3_aug50")]
position = Vector2(-192, 128)
color = "blue"

[node name="ButtonRed" parent="." instance=ExtResource("3_aug50")]
position = Vector2(192, 128)

[node name="ReplayOrb" parent="." instance=ExtResource("4_s0nni")]
visible = false
position = Vector2(-432, 0)

[node name="SimonNPC" parent="." instance=ExtResource("5_aug50")]
position = Vector2(0, -104)
scale = Vector2(7.0000005, 7.0000005)

[node name="bg_music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_kiw3p")

[node name="sfx_player" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_400sg")
volume_db = 3.816

[node name="HUD" type="CanvasLayer" parent="."]
layer = 0
follow_viewport_enabled = true

[node name="Score" type="Label" parent="HUD"]
offset_left = -544.0
offset_top = -304.0
offset_right = -469.0
offset_bottom = -281.0
text = "\"Score: 0\""

[node name="Round" type="Label" parent="HUD"]
offset_left = -544.0
offset_top = -240.0
offset_right = -476.0
offset_bottom = -217.0
text = "Round: 1"

[node name="Lives" type="Label" parent="HUD"]
offset_left = -544.0
offset_top = -272.0
offset_right = -487.0
offset_bottom = -223.0
text = "Lives: 3
"

[node name="Replays" type="Label" parent="HUD"]
offset_left = -544.0
offset_top = -208.0
offset_right = -451.0
offset_bottom = -159.0
text = "Replays: 0/3
"

[node name="ReplayButton" type="Button" parent="HUD"]
offset_left = -544.0
offset_top = -168.0
offset_right = -440.0
offset_bottom = -137.0
text = "Replay"

[node name="Countdown" type="Label" parent="HUD"]
offset_left = 80.0
offset_top = -144.0
offset_right = 144.0
offset_bottom = -80.0
label_settings = SubResource("LabelSettings_aug50")
horizontal_alignment = 1

[node name="PauseMenu" parent="." instance=ExtResource("4_kiw3p")]
visible = false
top_level = true
offset_left = -96.0
offset_top = -96.0
offset_right = -56.0
offset_bottom = -56.0

[connection signal="pressed" from="ButtonGreen" to="." method="_on_button_pressed"]
[connection signal="pressed" from="ButtonYellow" to="." method="_on_button_pressed"]
[connection signal="pressed" from="ButtonBlue" to="." method="_on_button_pressed"]
[connection signal="pressed" from="ButtonRed" to="." method="_on_button_pressed"]
